# remote-agent

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/plans/: 2026-03-27-prompt-flow-alignment-design.md  2026-03-27-prompt-flow-alignment-plan.md  2026-03-27-self-update-design.md  2026-03-27-self-update-plan.md  2026-04-03-otel-metrics-design.md  2026-04-03-otel-metrics-plan.md  2026-04-04-prometheus-metrics-design.md  2026-04-04-prometheus-metrics-plan.md  issue-11-design.md  issue-2-plan.md  issue-5-design.md  issue-7-design.md  issue-9-design.md
docs/superpowers/plans/: 2026-03-26-github-agent-implementation.md  2026-03-26-logging-and-traceability.md  2026-03-26-pr-review-comments.md  (+1 more)
src/remote_agent/: agent.py  audit.py  commit_message.py  config.py  db.py  dispatcher.py  exceptions.py  github.py  logging_config.py  main.py  models.py  poller.py  telemetry.py  updater.py  workspace.py
src/remote_agent/phases/: base.py  (+6 more)
tests/: conftest.py  test_agent.py  test_agent_telemetry.py  test_audit.py  test_commit_message.py  test_config.py  test_config_logging.py  test_db.py  test_dispatcher.py  test_eval_fixtures.py  test_github.py  test_integration.py  test_judge.py  test_logging_config.py  test_main.py  test_models.py  test_poller.py  test_prompts.py  test_telemetry.py  test_telemetry_integration.py  test_updater.py  test_workspace.py
tests/evals/: conftest.py  judge.py  test_designing_eval.py
tests/test_phases/: test_code_review.py  test_design_review.py  test_designing.py  test_implementation.py  test_plan_review.py  test_planning.py
(+11 files in other folders)
